fix styles and overlay z-index

--- a/less/site.less
+++ b/less/site.less
@@ -112,7 +112,7 @@ a:hover {
   position: fixed;
   min-width: 100%;
   min-height: 100%;
-  z-index: 0;
+  z-index: -1;
   background-color: transparent;
   transition: background-color 0.3s;
 }
@@ -380,15 +380,11 @@ mark.white {
 }
 
 .branch-activities-wrap {
-  margin-top: 28px;
+  margin: 28px 20px 0 25px;
   h2 {
     font-size: 2.4rem;
     margin: 1.2em 0;
   }
-}
-
-.activities-wrap {
-  margin: 0 25px;
 }
 
 .no-activities {
@@ -561,17 +557,9 @@ img.back {
 .breadcrumb-wrap {
   width: 100%;
   height: 50px;
-  text-decoration: none;
   text-align: left;
-  text-transform: uppercase;
   background-color: @primary-color;
   padding-left: 15px;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-flow: row nowrap;
-  flex-flow: row nowrap;
-  -webkit-align-items: center;
-  align-items: center;
   a {
     text-decoration: none;
     color: white;
@@ -581,11 +569,6 @@ img.back {
     font-size: 1.4em;
     margin-left: 5px;
     margin-bottom: 0;
-  }
-  img {
-    margin-left: 9px;
-    height: 23px;
-    padding-bottom: 2px;
   }
 }
 
